# flux-to-lean-demo

./: .gitignore  Cargo.toml  README.md  flux-to-lean-demo.code-workspace  prunelean.sh  runlean.sh  savelean.sh
LeanUserProofs/: lakefile.toml
LeanUserProofs/Fun/: FibSpecSeven.lean  FibSpecSum.lean  FibSpecTwelve.lean  VectorsArrEmpty.lean  VectorsArrGet.lean  VectorsArrPush.lean
LeanUserProofs/Lib/: Lemmas.lean  Tactics.lean
LeanUserProofs/Proof/: FibFibFastProof.lean  FibFibSlowProof.lean  FibIncrProof.lean  FibSumLoopProof.lean  FibTestBozoProof.lean  Tactics.lean  VectorsTest1Proof.lean
LeanUserProofs/Struct/: Arr.lean
LeanUserProofs/User/Fun/: FibIsPrime.lean  FibIsSqrt.lean  FibSpecFib.lean  RingbufferFsliceAppend.lean  RingbufferFsliceGet.lean  RingbufferFsliceLen.lean  RingbufferFslicePopFront.lean  RingbufferFslicePush.lean  RingbufferFsliceSet.lean  RingbufferFsliceSubslice.lean  RingbufferInitInv.lean  SortIsPerm.lean  SortIsSortedBetween.lean
LeanUserProofs/User/Proof/: FibFibFastProof.lean  FibFibFastoProof.lean  FibFibSlowProof.lean  FibIncrProof.lean  FibNinetyProof.lean  FibSevenProof.lean  FibSqrtProof.lean  FibTestPropProof.lean  FibTestTestFastEqSlowProof.lean  FibTwelveProof.lean  MainProof.lean  MemoFibMemoProof.lean  MemoTestMemoProof.lean  RingbufferImpl__1__DequeueProof.lean  RingbufferImpl__1__EnqueueProof.lean  RingbufferImpl__1__GetInternalProof.lean  (+35 more)
lean_proofs/: lake-manifest.json  lakefile.toml
lean_proofs/LeanProofs/: Basic.lean
src/: fib.rs  main.rs  memo.rs  merge_sort.rs  ringbuffer.rs  sort.rs  vectors.rs
(+114 files in other folders)
