[package]
name = "flux-to-lean-demo"
version = "0.1.0"
edition = "2024"

[workspace]

[profile.dev]
incremental = true

[package.metadata.flux]
cache = true
enabled = true
dump_constraint = true
lean = "check"

[dependencies]
flux-rs = { git = "https://github.com/flux-rs/flux" }
flux-core = { git = "https://github.com/flux-rs/flux" }
flux-alloc = { git = "https://github.com/flux-rs/flux" }
rand = "0.8"
im = "15.1.0"

[lints.rust]
unexpected_cfgs = {level="warn", check-cfg=['cfg(flux)']}
